--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,79 @@ body{
 }
 
 /* .section{padding: 50px 0;} */
+
+
+/* ! spinner css */
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+
+}
+
+.spinner {
+  border: 4px solid #fbac7e53;
+  border-top: 4px solid #FBAB7E; 
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+/* ! Error css */
+
+.error-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+.error-message {
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb; 
+  border-radius: 5px;
+  padding: 15px;
+  text-align: center;
+  max-width: 300px;
+}
+
+.error-message p {
+  font-size: 1.2em;
+  color: #721c24;
+  margin: 0;
+}
+
+
+/*! Pagination style */
+
+.page {
+ margin: 0 5px;
+ padding: 8px 12px;
+ cursor: pointer;
+ border-radius: 15px;
+ background-color: #f0f0f0;
+ color: #333;
+ transition: background-color 0.3s;
+}
+
+.page.active {
+ background-color: #f85b0053;
+ color: #fff;
+ cursor: default;
+}
+
+
+.disabled {
+ background-color: #ddd;
+ color: #666;
+ cursor: not-allowed;
+}
