--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,22 @@ body{
  color: #666;
  cursor: not-allowed;
 }
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 3px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 0.25em;
+}
+
+.custom-scrollbar {
+  scrollbar-width: 2px;
+  scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+}
