--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html{scroll-behavior: smooth;
 }
 
 body{
-  background-image: linear-gradient(to right bottom, #fbdb89, #f48982 #f6cfcc7b);
+  background-image: linear-gradient(to right top, #f38e82, #f2a98a, #f0c39d, #efdab9, #f3eed9);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
